fix layout issues

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -69,7 +69,7 @@ figure, .map {
   position: fixed;
   bottom: 24px;
   right: 24px;
-  font-size: 32px;
+  font-size: 38px;
   background-color: $p-grey-light;
   border-radius: 50%;
   cursor: pointer;
