--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -26,7 +26,6 @@ main {
 
 .page__content {
   grid-area: content;
-  align-self: center;
   max-width: 48rem;
   width: 100%;
 }
@@ -125,17 +124,24 @@ img.me {
     padding: 16px;
   }
 
+  .author-block {
+    display: flex;
+  }
+
+  .author-avatar {
+    margin-right: 8px;
+  }
+
+  .avatar {
+    margin-top: 0;
+  }
+
   .page__aside {
     width: auto;
   }
 
-  .content.flex {
-    flex-flow: column;
-  }
-
-  .categories li {
+  .categories__item {
     display: inline-block;
-    margin-right: 16px;
   }
 
   .promo {
