--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -57,8 +57,9 @@
 
 @media (max-width: 768px) {
   .post-preview {
-    width: 100%;
-    height: 56.25vw;
+    width: 70px;
+    height: 70px;
+    margin-right: 8px;
   }
 
   .post {
